Fixed overflow in small screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,7 @@ body {
   max-width: 500px;
   margin: auto;
   border: 3px solid rgba(93, 93, 93, 0.34);
+  overflow-x: hidden;
 }
 
 .content-placeholder {
